# ml-kernel-runtime

./: CMakeLists.txt  LICENSE  Makefile  README.md  benchmark_results.csv  tile_runtime.plan.md
.github/workflows/: cmake-multi-platform.yml
benchmarks/: benchmark_gemm.cpp
docs/: design_decisions.md  gemm_performance_comparison.html
include/: aligned_allocator.h  cpu_features.h  gemm.h  tensor.h  timer.h
src/: gemm_naive.cpp  gemm_parallel.cpp  gemm_tiled.cpp  tensor.cpp
tests/: test_gemm.cpp  test_tensor.cpp  test_utils.h
